# hamelnb

./: .gitignore  AGENTS.md  README.md  pyproject.toml  stock.ipynb
.claude-plugin/: plugin.json
.claude/skills/hamelnb/: SKILL.md
.claude/skills/jupyter-live-kernel/: SKILL.md
.github/workflows/: fast-tests.yml  full-tests.yml
skills/jupyter-live-kernel/: SKILL.md
skills/jupyter-live-kernel/agents/: openai.yaml
skills/jupyter-live-kernel/references/: jupyter-hooks.md
skills/jupyter-live-kernel/scripts/: jupyter_live_kernel.py
skills/live-kernel/: SKILL.md
tests/: support.py  test_jupyter_collaboration_refresh.py  test_jupyter_live_kernel.py
video/: package-lock.json  package.json  tsconfig.json
video/scripts/: capture_real_jupyter_seq.cjs
video/src/: Root.tsx  SkillShowcase.tsx
