[project]
name = "hamelnb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.10",
]

[project.optional-dependencies]
test = [
    "jupyter-client",
    "nbformat",
    "pytest",
    "requests",
    "websocket-client",
]
browser = [
    "jupyter-collaboration>=4.2.1",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "jupyter-client",
    "nbformat",
    "pytest",
    "requests",
    "websocket-client",
]
browser = [
    "jupyter-collaboration>=4.2.1",
    "playwright>=1.58.0",
]
